IT-AUTOFLIGHT Changelog
Copyright (c) 2022 Josh Davidson (Octal450)
I will note if new ITAF tuning or config is required. Simply check the "ITAF CONFIG.txt" file.

---------------------------------------------------------------------------------------------------------------------

V4.0.8 Beta 1:
[Control Loop]
* Changed: Tweaked rate scheme slightly

[Logic]
* Renamed reduc-agl-ft to accel-ft
* Renamed togaspd to toga-spd

---------------------------------------------------------------------------------------------------------------------

V4.0.7:
[Control Loop]
* Added: New rate based FLCH (speed on pitch) controller
* Added: Ability to use a third NAV radio
* Added: Wings Level mode
* Fixed: If all APs and FDs are off, and the autopilot is engaged in V/S mode, the pitch might jerk
* Fixed: Flare law shallowing up too early and floating
* Fixed: Really slow response in some situations
* Fixed: Strange bug with glideslope
* Changed: Flight Director Pitch now outputs in degrees (in Canvas, you can just translate it the same as pitch scale)

[Logic]
* Added: Ability to define when APs and A/THR are available
* Added: APs and A/THR trips off if respective system is unavailable
* Added: Ability to set blank mode
* Added: Ability to start with flight directors on by default
* Added: Armed modes disarm if they become unavailable
* Added: Ability to use a third NAV radio
* Added: Built in VS/FPA switching logic
* Added: Wings Level mode
* Fixed: Bad handling of radio selection
* Fixed: LOC capturing too early on shallow intercept and increasing intercept angle
* Fixed: Flare engagement

[GUI]
* Added: NAV source toggles for all 3 radios

---------------------------------------------------------------------------------------------------------------------

V4.0.6:
[Control Loop]
* Added: Ability to separate HDG HLD and HDG SEL
* Fixed: Bug in T/O and G/A modes
* Fixed: Altitude Predictor overshoots when ALT HLD is pushed