@@ -49,5 +49,6 @@ See wiki for details on parameters.
 			<retard-enable>1</retard-enable> <!-- AGL to Thrust Retard -->
 			<retard-ft>50</retard-ft> <!-- Enable Thrust Retard -->
 			<toga-spd>160</toga-spd> <!-- V2 + 10kts -->
+			<use-controls-flight>1</use-controls-flight> <!-- Use /controls/flight properties -->
 		</settings>
 	</it-autoflight>
