@@ -6,6 +6,7 @@ I will note if new ITAF tuning or config is required. Simply check the "ITAF CON
 
 V4.0.8 Beta 1:
 [Control Loop]
+* Added: Internal control drivers for overridable yoke (New config required)
 * Changed: Tweaked rate scheme slightly
 
 [Logic]
